# sas-confiance-ia

./: .dockerignore  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
corpus/synthetique/: 01-courrier-usager.md  02-note-rh.md  03-contrat-prestation.md  05-compte-rendu-reunion.md  06-canaris.md  07-conseil-medical.md  README.md  valeurs-connues.json  verite-terrain-canaris.json  verite-terrain-ner.json
corpus/synthetique/04-dossier-usager/: piece-1-courrier.md  piece-2-note-interne.md  piece-3-compte-rendu.md
docs/: checklist-publication.md  deploiement.md  index.md  parcours-formateur.md  tutoriel-installation.md
docs/eval/: evaluation-juge.md  evaluation-ner.md  ner-baseline.json
docs/specs/: 01-PRD.md  02-AI-SPEC.md  03-SPEC.md  04-ADR.md  05-PLAN.md  06-HANDOFF.md  QUESTIONS.md
src/sas_confiance_ia/: __init__.py  __main__.py  api.py  backends.py  configuration.py  coreference.py  detection.py  evaluation.py  evaluation_juge.py  fichiers.py  integrite.py  journal.py  juge.py  ner.py  politique.py  pseudonymiseur.py  surrogates.py  telechargement.py  ui.py  validators.py  vault.py
tests/: conftest.py  test_backends.py  test_configuration.py  test_coreference.py  test_corpus.py  test_dates.py  test_detection.py  test_evaluation.py  test_evaluation_juge.py  test_fichiers.py  test_fichiers_ui.py  test_integrite.py  test_journal.py  test_juge.py  test_ner.py  test_politique.py  test_proxy.py  test_pseudonymiseur.py  test_sanite.py  test_surrogates.py  test_ui.py  test_validators.py  test_vault_chiffre.py
