[project]
name = "sas-confiance-ia"
version = "0.1.0"
description = "Sas Confiance IA : sas de pseudonymisation avant IA (Comptoir des Signaux)"
readme = "README.md"
requires-python = ">=3.12"
license = "EUPL-1.2"
authors = [
  { name = "Comptoir des Signaux" },
]
keywords = ["pseudonymisation", "rgpd", "llm", "presidio", "collectivités"]
dependencies = [
  "fastapi>=0.115",
  "pydantic>=2",
  "cryptography>=43",
  "uvicorn>=0.30",
  "httpx2",
  # Surrogates réalistes fr_FR (REQ-012), licence MIT compatible EUPL-1.2.
  "faker>=30",
  # Fichiers (Lot 15) : python-docx (MIT), pypdf (BSD), multipart FastAPI.
  # Le PDF caviardé (PyMuPDF, AGPL contaminante) est exclu de la v1 : arbitrage
  # Q6, docs/specs/QUESTIONS.md.
  "python-docx>=1.1",
  "pypdf>=5",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.6",
]
# Couche C2 (Lot 9) : Presidio in-process (ADR-009) avec moteur transformers.
# Le socle Phase 0 reste installable sans ces dépendances lourdes.
# Sur CPU seul, installer torch d'abord depuis l'index CPU :
#   uv pip install torch --index-url https://download.pytorch.org/whl/cpu
ner = [
  "presidio-analyzer>=2.2,<3",
  "transformers>=4.40,<5",
  "spacy-huggingface-pipelines>=0.0.4",
  "sentencepiece>=0.2",
  "protobuf>=5",
  "torch>=2.3",
  "fr-core-news-sm @ https://github.com/explosion/spacy-models/releases/download/fr_core_news_sm-3.8.0/fr_core_news_sm-3.8.0-py3-none-any.whl",
]
# Repli spaCy configurable (02-AI-SPEC §1) pour machine modeste, sans transformers.
ner-repli-spacy = [
  "fr-core-news-lg @ https://github.com/explosion/spacy-models/releases/download/fr_core_news_lg-3.8.0/fr_core_news_lg-3.8.0-py3-none-any.whl",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sas_confiance_ia"]

[tool.hatch.metadata]
# Les modèles spaCy s'installent par URL directe (roues GitHub explosion),
# versions épinglées : nécessaire aux extras [ner] et [ner-repli-spacy].
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
  "ner: nécessite l'extra [ner] et le modèle NER téléchargé localement (sauté sinon)",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
